# Rover_2021_2022

software/: .gitignore
software/firmware/Batery Characterization/: Batery Characterization.atsln  ProcessData.py  characterize.py
software/firmware/Batery Characterization/Batery Characterization/: Batery Characterization.cproj
software/firmware/Battery Monitoring System/: Battery Monitoring System.atsln  ReadData.py
software/firmware/ModbusDevelopment/: MakeItBlink.py  ModbusDevelopment.atsln  crcprototype.py  minimal_modbus_test.py  modbus_test.py  roverbus.py
software/firmware/ModbusTesting/: ModbusTesting.atsln
software/firmware/SAM4S_libraries/: GccBoardProject1.atsln
software/firmware/Teensybus/: main.cpp  modbus.cpp  modbus.h  port.cpp  port.h
software/firmware/sam4s_backup_mode/: sam4s_backup_mode1.atsln
software/ros_packages/: nimbro_topic_transport
software/ros_packages/ground_station/: CMakeLists.txt
software/ros_packages/mini_arm_description/: CMakeLists.txt  package.xml
software/ros_packages/mr1718-arm-urdf_export/: CMakeLists.txt
software/ros_packages/rover_arm/: CMakeLists.txt
software/ros_packages/rover_arm_moveit_config/: CMakeLists.txt
software/ros_packages/rover_camera/: CMakeLists.txt
software/ros_packages/rover_control/: CMakeLists.txt
software/ros_packages/rover_main/: CMakeLists.txt
software/ros_packages/rover_odometry/: CMakeLists.txt
software/ros_packages/rover_science/: CMakeLists.txt
software/ros_packages/rover_status/: CMakeLists.txt
software/ros_packages/zed_wrapper/: CMakeLists.txt
(+264 files in other folders)
